--- a/lr8/sandbox/Gemfile
+++ b/lr8/sandbox/Gemfile
@@ -51,7 +51,9 @@ gem "bootsnap", require: false
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
+  gem 'ffi', '~> 1.15', '>= 1.15.5'
   gem 'rspec-rails', '~> 6.0.0'
+  gem 'nokogiri', '~> 1.13', '>= 1.13.9'
 end
 
 group :development do
